# tessara

./: .git-message  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPENDENTS.md  README.md  environment.yml  pyproject.toml  tessara.code-workspace
.github/ISSUE_TEMPLATE/: 1-general.yml  config.yml
.github/workflows/: ci.yml  publish-noarch.yml
archive/: ARCHIVE_LOG.md.template
archive/2025-06-01_readme/: ARCHIVE_LOG.md  README.md
conda.recipe/: meta.yaml
config/dictionaries/: project.txt  python.txt  tools.txt
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  releaserc.toml
docs/: conf.py  index.md  index.rst
docs/adr/: 1-sweeping-parameters.md
docs/api/: core.md  core.rst  handling.md  handling.rst  index.md  index.rst  validation.md  validation.rst
docs/guide/: concepts.md  concepts.rst  installation.md  quickstart.md  quickstart.rst  usage.md
docs/internals/: index.md
src/tessara/: __init__.py  __main__.py  __version__.py  cli.py
src/tessara/core/: __init__.py  parameters.py  types.py
src/tessara/core/errors/: __init__.py  handling.py  validation.py
src/tessara/handling/: __init__.py  assigner.py  binder.py  composer.py  config_io.py  param_interface.py  sweeper.py  tree.py
src/tessara/validation/: __init__.py  rules.py  validator.py
tests/: conftest.py
tests/test_tessara/: __init__.py  test_architecture_fixes.py
tests/test_tessara/test_errors/: __init__.py  test_validation_errors.py
tests/test_tessara/test_handling/: __init__.py  test_param_interface.py
tests/test_tessara/test_validation/: __init__.py
tests/test_tessara/tests_core/: __init__.py  test_parameters.py
